Archive2/8f/5e2f647b770510/output
main.cpp:1:15: error: 'string' was not declared in this scope
 char * buffer(string path, int position)
               ^
main.cpp:1:28: error: expected primary-expression before 'int'
 char * buffer(string path, int position)
                            ^
main.cpp:1:40: error: expression list treated as compound expression in initializer [-fpermissive]
 char * buffer(string path, int position)
                                        ^
main.cpp:2:1: error: expected ',' or ';' before '{' token
 {
 ^
